TreatmentType CRUD opties

--- a/Webapp/Webapp/appsettings.json
+++ b/Webapp/Webapp/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Development": "Server=mssql.fhict.local;Database=dbi409368;User Id=dbi409368;Password=Test123;"
+  }
 }
