--- a/Webapp/Webapp/Webapp.csproj
+++ b/Webapp/Webapp/Webapp.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
+    <PackageReference Include="Umbrella.AspNetCore.DataAnnotations" Version="2.6.1" />
   </ItemGroup>
 
 </Project>
